Update xml documentation
(Old svn revision: 29937)

--- a/docs/manual/gl/exo-preferred-applications.xml.in
+++ b/docs/manual/gl/exo-preferred-applications.xml.in
@@ -8,7 +8,7 @@
 
   <!-- Header -->
   <articleinfo>
-    <title>Xfce 4 Preferred Applications</title>
+    <title>Aplicacións preferidas de Xfce 4</title>
 
     <pubdate>&date;</pubdate>
 
@@ -106,14 +106,14 @@
       </para>
 
       <figure id="configuration-webbrowser-menu">
-        <title>Select Web Browser</title>
+        <title>Seleccione o navegador web</title>
         <screenshot>
           <mediaobject>
             <imageobject>
               <imagedata fileref="images/exo-preferred-applications-webbrowser-menu.png" format="PNG"/>
             </imageobject>
             <textobject>
-              <phrase>Select Web Browser</phrase>
+              <phrase>Seleccione o navegador web</phrase>
             </textobject>
           </mediaobject>
         </screenshot>
@@ -128,14 +128,14 @@
       </para>
 
       <figure id="configuration-webbrowser-custom">
-        <title>Specify a custom Web Browser</title>
+        <title>Especifique un navegador web personalizado</title>
         <screenshot>
           <mediaobject>
             <imageobject>
               <imagedata fileref="images/exo-preferred-applications-webbrowser-custom.png" format="PNG"/>
             </imageobject>
             <textobject>
-              <phrase>Specify a custom Web Browser</phrase>
+              <phrase>Especifique un navegador web personalizado</phrase>
             </textobject>
           </mediaobject>
         </screenshot>
@@ -173,7 +173,7 @@
               <imagedata fileref="images/exo-preferred-applications-utilities.png" format="PNG"/>
             </imageobject>
             <textobject>
-              <phrase>Select other applications</phrase>
+              <phrase>Seleccionar outras aplicacións</phrase>
             </textobject>
           </mediaobject>
         </screenshot>
@@ -270,12 +270,7 @@
       of the License, or (at your option) any later version.
     </para>
 
-    <para>
-      You should have received a copy of the GNU General Public License 
-      along with this program; if not, write to the Free Software 
-      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, 
-      USA.
-    </para>
+    <para>Debeu recibir unha copia da Licenza pública xeral de GNU xunta con este programa; en caso contrario, escriba á Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.</para>
   </sect1>
   
 </article>
