* configure.in.in, Makefile.am, exo-thumbnailers/Makefile.am, 	  exo-thumbnailers/exo-generic-thumbnailer.{c,h}, 	  exo-thumbnailers/exo-thumbnailer-service-dbus.xml, 	  exo-thumbnailers/exu-thumbnailer-service-main.c, 	  exo-thumbnailers/exo-thumbnailer-service.{c,h}: Initial import of a 	  raw skeleton for the implementation of the Thumbnailer Specification. 	  ExoGenericThumbnailer implements org.freedesktop.thumbnailer.Generic and 	  ExoThumbnailerService is the D-Bus service that establishes the D-Bus 	  connection and makes sure the thumbnailer service always runs only once. 	  There seems to be something wrong right now, though. I can't get the 	  service to be recognized by D-Bus properly at all ...
(Old svn revision: 29956)

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,7 @@ SUBDIRS =								\
 	exo-mount							\
 	$(EXO_MOUNT_NOTIFY_SUBDIR)					\
 	exo-open							\
+	exo-thumbnailers						\
 	docs								\
 	icons								\
 	pixmaps								\
