--- a/configure.in.in
+++ b/configure.in.in
@@ -146,6 +146,8 @@ XDT_I18N([@LINGUAS@], [libexo-libexo_version_major().libexo_version_minor()])
 dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
+XDT_CHECK_PACKAGE([DBUS], [dbus-1], [1.0.0])
+XDT_CHECK_PACKAGE([DBUS_GLIB], [dbus-glib-1], [0.72])
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.16.0])
 XDT_CHECK_PACKAGE([GIO], [gio-2.0], [2.16.0])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.14.0])
@@ -426,6 +428,7 @@ exo-mount/Makefile
 exo-mount-notify/Makefile
 exo-open/Makefile
 exo-support/Makefile
+exo-thumbnailers/Makefile
 icons/Makefile
 icons/24x24/Makefile
 icons/48x48/Makefile
