Rename exo-0.3 to exo-1. Merge versioning-from-0.3-to-1 branch.
commit c9b8d885c034022ae7cbaba91f17ffc15b5608ea
Author: Nick Schermer <nick@xfce.org>
Date:   Fri Aug 14 22:59:00 2009 +0200

    Cleanup some unneeded Gtk or Glib version checks.

commit 6a9b850134897ea57830de53dce38d6abb510193
Author: Nick Schermer <nick@xfce.org>
Date:   Fri Aug 14 22:52:34 2009 +0200

    Move some private binding struts out of the header.

commit 5ba0cb5e14b1e89f94c9e1a3fa9763dc57220249
Author: Jannis Pohlmann <jannis@xfce.org>
Date:   Thu Aug 13 17:16:47 2009 +0200

    Remove exo_icon_view_{set,get}_{text,markup,pixbuf}_column() functions.

commit 28e7f49b8864163aacf764b21d07592a14072a45
Author: Jannis Pohlmann <jannis@xfce.org>
Date:   Thu Aug 13 16:54:36 2009 +0200

    Drop ExoPangoEllipsizeMode and related functions.

commit 7ba2f84774dbf69f669cc6677cae10d382c6b66d
Author: Jannis Pohlmann <jannis@xfce.org>
Date:   Thu Aug 13 16:49:00 2009 +0200

    Remove exo_md5_*() functions and ExoMd5Digest. There's GChecksum now.

commit 0d7c388f8875a32d902cd94ca492787c812121d4
Author: Jannis Pohlmann <jannis@xfce.org>
Date:   Thu Aug 13 16:40:57 2009 +0200

    Remove exo_intern_string() and exo_intern_static_string().

commit 796215a00b477d8ad10fd5a3d1c6b575739ef2ba
Author: Jannis Pohlmann <jannis@xfce.org>
Date:   Thu Aug 13 16:31:55 2009 +0200

    Remove ExoEllipsizedLabel from exo.symbols.

commit ec8c2ced12d05a0e54ade145527e0d2fb752c36c
Author: Jannis Pohlmann <jannis@xfce.org>
Date:   Thu Aug 13 16:26:10 2009 +0200

    Drop ExoEllipsizedLabel entirely.

commit 9bb4e592eb7c04d7227292ab3eb59f47a5cb634c
Author: Jannis Pohlmann <jannis@xfce.org>
Date:   Thu Aug 13 15:39:50 2009 +0200

    Drop exo_gtk_object_ref_sink and exo_gtk_radio_action_set_current_value.

    This is part of bug #5671, which is about dropping deprecated/obsolete
    bits from exo before we switch from exo-0.3 to exo-1.

commit 79ce003347ba5e4bb32a9f3c2cd93739fc07a0f3
Author: Jannis Pohlmann <jannis@xfce.org>
D

--- a/configure.in.in
+++ b/configure.in.in
@@ -9,7 +9,8 @@ dnl
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
-m4_define([libexo_verinfo], [5:0:5]) dnl Needs to be set to [6:0:6] before the next release!
+m4_define([libexo_verinfo], [0:0:0])
+m4_define([libexo_version_api], [1])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [3])
 m4_define([libexo_version_micro], [101])
@@ -51,14 +52,14 @@ AC_SUBST([LIBEXO_VERINFO])
 dnl ****************************
 dnl *** Subst libexo version ***
 dnl ****************************
+LIBEXO_VERSION_API=libexo_version_api()
 LIBEXO_VERSION_MAJOR=libexo_version_major()
 LIBEXO_VERSION_MINOR=libexo_version_minor()
 LIBEXO_VERSION_MICRO=libexo_version_micro()
-LIBEXO_VERSION_API=$LIBEXO_VERSION_MAJOR.$LIBEXO_VERSION_MINOR
+AC_SUBST([LIBEXO_VERSION_API])
 AC_SUBST([LIBEXO_VERSION_MAJOR])
 AC_SUBST([LIBEXO_VERSION_MINOR])
 AC_SUBST([LIBEXO_VERSION_MICRO])
-AC_SUBST([LIBEXO_VERSION_API])
 
 dnl *******************************
 dnl *** Check for UNIX variants ***
@@ -162,7 +163,7 @@ dnl *** Check for HAL (optional) ***
 dnl ********************************
 XDT_CHECK_OPTIONAL_PACKAGE([HAL], [hal-storage], [0.5.7], [hal], [HAL support], [yes])
 if test x"$HAL_FOUND" = x"yes"; then
-  dnl # substituted into exo-hal-0.3.pc
+  dnl # substituted into exo-hal-1.pc
   HAL_STORAGE_DEPENDENCY="hal-storage"
 
   dnl # Check if LIBHAL_DRIVE_CDROM_CAPS_DVDPLUSRWDL is declared
@@ -414,12 +415,12 @@ docs/reference/Makefile
 docs/reference/version.xml
 exo.spec
 exo/Makefile
-exo/exo-0.3.pc
+exo/exo-1.pc
 exo/exo-config.h
 exo-csource/Makefile
 exo-desktop-item-edit/Makefile
 exo-hal/Makefile
-exo-hal/exo-hal-0.3.pc
+exo-hal/exo-hal-1.pc
 exo-helper/Makefile
 exo-helper/helpers/Makefile
 exo-mount/Makefile
