--- a/configure.in.in
+++ b/configure.in.in
@@ -208,9 +208,9 @@ AC_ARG_ENABLE([python],
 have_python=no
 if test x"$enable_python" != x"no"; then
   AC_MSG_NOTICE([Checking to see if we can build Python bindings])
-  AM_PATH_PYTHON([2.2])
+  AM_PATH_PYTHON([2.2],, [:])
 
-  if test -z "$PYTHON"; then
+  if test x"$PYTHON" = x":"; then
     AC_MSG_WARN([Python not found])
   else
     XDT_CHECK_PYTHON_HEADERS([have_python_headers=yes],[have_python_headers=no])
