--- a/configure.in.in
+++ b/configure.in.in
@@ -12,17 +12,17 @@ dnl ***************************
 m4_define([libexo_verinfo], [0:0:0])
 m4_define([libexo_version_api], [1])
 m4_define([libexo_version_major], [0])
-m4_define([libexo_version_minor], [3])
-m4_define([libexo_version_micro], [101])
+m4_define([libexo_version_minor], [5])
+m4_define([libexo_version_micro], [0])
 m4_define([libexo_version_nano], [])
-m4_define([libexo_version_build], [r@REVISION@])
-m4_define([libexo_version_tag], [svn])
-m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [svn], [libexo_version_tag()-libexo_version_build()], [libexo_version_tag()])])
+m4_define([libexo_version_build], [@REVISION@])
+m4_define([libexo_version_tag], [git])
+m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [git], [libexo_version_tag()-libexo_version_build()], [libexo_version_tag()])])
 
 dnl ********************************************
 dnl *** Full debug support for SVN snapshots ***
 dnl ********************************************
-m4_define([libexo_debug_default], [ifelse(libexo_version_tag(), [svn], [full], [minimum])])
+m4_define([libexo_debug_default], [ifelse(libexo_version_tag(), [git], [full], [minimum])])
 
 dnl ***************************
 dnl *** Initialize autoconf ***
@@ -33,7 +33,7 @@ All rights reserved.
 Written by Benedikt Meurer <benny@xfce.org>.])
 AC_INIT([exo], [libexo_version], [http://bugzilla.xfce.org/])
 AC_PREREQ([2.50])
-AC_REVISION([$Id$])
+AC_REVISION([@REVISION@])
 AC_CANONICAL_TARGET()
 
 dnl ***************************
