Fix a typo related to the previous commit.

--- a/exo-helper/exo-preferred-applications.in
+++ b/exo-helper/exo-preferred-applications.in
@@ -9,4 +9,4 @@
 # Browser, Mail Reader and Terminal Emulator.
 #
 
-exec @libexecdir@/exo-helper-@LIBEXO_VERSION_MAJOR@ --configure "$@"
+exec @libexecdir@/exo-helper-@LIBEXO_VERSION_API@ --configure "$@"
