Squashed commit of the following:
commit c89f6932db63a37827ef5c05e06002d2eeb151ad
Author: Nick Schermer <nick@xfce.org>
Date:   Thu Aug 27 20:17:00 2009 +0200

    Strip the mailto: part from an uri since we work with mailto:%s in the desktop files.

commit 8d82d52e199b8dfc8ef99763d203daaa6c4ed688
Author: Nick Schermer <nick@xfce.org>
Date:   Wed Aug 26 22:46:47 2009 +0200

    Fix distcheck with external gio module.

commit a8c711840c69e434ea7b436cc9c84444328faadd
Author: Nick Schermer <nick@xfce.org>
Date:   Wed Aug 26 22:34:04 2009 +0200

    Update POTFILES.in.

commit 3167524eae1b5dfacb3c4c6dc7adfe53f5f0b2e4
Author: Nick Schermer <nick@xfce.org>
Date:   Wed Aug 26 19:11:31 2009 +0200

    Use -compose for thunderbird (bug #4496).

commit d72abb5d58b217a60fde7755f1102f1658747d39
Author: Nick Schermer <nick@xfce.org>
Date:   Wed Aug 26 18:44:35 2009 +0200

    Add gopher to the known browser URI schemes (bug #4497).

commit 41b0c2a5d33f51195f0a01d9154b099f0a9cdc61
Author: Nick Schermer <nick@xfce.org>
Date:   Wed Aug 26 18:42:01 2009 +0200

    Update docs.

commit d28a218994ae1b7ca3553a864a1ab28312141ab2
Author: Nick Schermer <nick@xfce.org>
Date:   Wed Aug 26 18:38:26 2009 +0200

    Update python bindings.

commit e09d4bcc06dcd32a135b98b2ddca98e5d2e4e079
Author: Nick Schermer <nick@xfce.org>
Date:   Wed Aug 26 18:37:03 2009 +0200

    Remove exo-url functions and move dialog hook to gtk extensions.

commit c07a72487229b8ab3b75326dd1a29211b9455914
Author: Nick Schermer <nick@xfce.org>
Date:   Wed Aug 26 18:09:09 2009 +0200

    Add FileManager support to exo-open and known URI completion.

    Move some code from exo-url to exo-open to complete non-uris
    when passing for example some filenames to exo-open.

commit a16361e2f7684ac84d9e80008969e3a7db5a5838
Author: Nick Schermer <nick@xfce.org>
Date:   Wed Aug 26 18:08:10 2009 +0200

    Iterate the mainloop so the dialog is fully destroyed before executing.

commit 4a3b8878bde0e18faae459e1a530bbd0f6c24aee
Auth

--- a/configure.in.in
+++ b/configure.in.in
@@ -157,9 +157,27 @@ dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.16.0])
 XDT_CHECK_PACKAGE([GIO], [gio-2.0], [2.16.0])
+XDT_CHECK_PACKAGE([GIO_UNIX], [gio-unix-2.0], [2.16.0])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.14.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.16.0])
 XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.2.2])
+
+dnl ****************************
+dnl *** GIO modules location ***
+dnl ****************************
+AC_ARG_WITH([gio-module-dir],
+            [AC_HELP_STRING([--with-gio-module-dir=PATH],
+                            [Specify where to install the exo gio module (default=autodetect)])],
+            [gio_module_dir="$withval"])
+if test x"$gio_module_dir" = x""; then
+  GIOMODULEDIR="`$PKG_CONFIG gio-2.0 --variable giomoduledir`"
+elif test x"$gio_module_dir" = x"distcheck"; then
+  GIOMODULEDIR=""
+else
+  GIOMODULEDIR="$gio_module_dir"
+fi
+AC_SUBST([GIOMODULEDIR])
+AM_CONDITIONAL([HAVE_GIO_MODULEDIR], [test x"$GIOMODULEDIR" != x""])
 
 dnl **************************************
 dnl *** Check for libnotify (optional) ***
@@ -247,7 +265,7 @@ if test x"$enable_python" != x"no"; then
     if test x"$enable_python" = x"yes"; then
       AC_MSG_ERROR([Building python explicitly requested, but cannot build python bindings])
     else
-      AC_MSG_WARN([Couldn't find either PyGTK or the Python headers, not building Python bindings])
+      AC_MSG_WARN([Could not find either PyGTK or the Python headers, not building Python bindings])
     fi
   fi
 fi
@@ -358,7 +376,7 @@ esac
 dnl ****************************************
 dnl *** Check for ELF visibility support ***
 dnl ****************************************
-AC_ARG_ENABLE([visibility], AC_HELP_STRING([--disable-visibility], [Don't use ELF visibility attributes]), [], [enable_visibility=yes])
+AC_ARG_ENABLE([visibility], AC_HELP_STRING([--disable-visibility], [Do not use ELF visibility attributes]), [], [enable_visibility=yes])
 have_gnuc_visibility=no
 if test x"$enable_visibility" != x"no"; then
   dnl Check whether the compiler supports the visibility attribute
@@ -427,6 +445,7 @@ exo/exo-1.pc
 exo/exo-config.h
 exo-csource/Makefile
 exo-desktop-item-edit/Makefile
+exo-gio-module/Makefile
 exo-hal/Makefile
 exo-hal/exo-hal-1.pc
 exo-helper/Makefile
@@ -458,6 +477,7 @@ echo "* HAL support:    yes"
 else
 echo "* HAL support:    no"
 fi
+echo "* GIO Module Dir: $GIOMODULEDIR"
 echo "* Debug Support:  $enable_debug"
 echo "* Python Support: $have_python"
 echo
