--- a/exo/exo-config.h.in
+++ b/exo/exo-config.h.in
@@ -31,10 +31,42 @@
 
 G_BEGIN_DECLS
 
+/**
+ * EXO_MAJOR_VERSION:
+ *
+ * Like #exo_major_version, but from the headers used at application
+ * compile time, rather than from the library linked against at
+ * application run time.
+ **/
 #define EXO_MAJOR_VERSION @LIBEXO_VERSION_MAJOR@
+
+/**
+ * EXO_MINOR_VERSION:
+ *
+ * Like #exo_minor_version, but from the headers used at application
+ * compile time, rather than from the library linked against at
+ * application run time.
+ **/
 #define EXO_MINOR_VERSION @LIBEXO_VERSION_MINOR@
+
+/**
+ * EXO_MICRO_VERSION:
+ *
+ * Like #exo_micro_version, but from the headers used at application
+ * compile time, rather than from the library linked against at
+ * application run time.
+ **/
 #define EXO_MICRO_VERSION @LIBEXO_VERSION_MICRO@
 
+/**
+ * EXO_CHECK_VERSION:
+ * @major: major version (e.g. 1 for version 1.2.3)
+ * @minor: minor version (e.g. 2 for version 1.2.3)
+ * @micro: micro version (e.g. 3 for version 1.2.3)
+ *
+ * Returns: %TRUE if the version of the exo header files is equal or
+ *          better than the passed-in version.
+ **/
 #define EXO_CHECK_VERSION(major,minor,micro) \
   (EXO_MAJOR_VERSION > (major) \
    || (EXO_MAJOR_VERSION == (major) \
