Add missing file in POTFILES.in.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -33,6 +33,7 @@ exo-desktop-item-edit/exo-die-command-entry.c
 exo-desktop-item-edit/exo-die-desktop-model.c
 exo-desktop-item-edit/exo-die-editor.c
 exo-desktop-item-edit/exo-die-enum-types.c
+exo-desktop-item-edit/exo-die-utils.c
 exo-desktop-item-edit/main.c
 
 exo-hal/exo-hal.c
