--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -49,7 +49,8 @@ INCLUDES =	 							\
 	-I$(top_srcdir) 						\
 	-I$(top_builddir) 						\
 	$(GTK_CFLAGS)							\
-	$(LIBXFCE4UTIL_CFLAGS)
+	$(LIBXFCE4UTIL_CFLAGS)						\
+	$(GTK_DOC_EXTRA_CFLAGS)
 
 GTKDOC_LIBS =  								\
 	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_API).la
