--- a/configure.in.in
+++ b/configure.in.in
@@ -236,7 +236,7 @@ if test x"$enable_python" != x"no"; then
     XDT_CHECK_PACKAGE([PYGTK], [pygtk-2.0], [2.4.0], \
                       [have_pygtk=yes], [have_pygtk=no])
 
-    AC_PATH_PROG([PYGTK_CODEGEN], [pygtk-codegen-2.0], [no])
+    AC_PATH_PROG([PYGTK_CODEGEN], [pygobject-codegen-2.0], [no])
 
     if test x"$have_python_headers" = x"yes" -a x"$have_pygtk" = x"yes" -a x"$PYGTK_CODEGEN" != x"no"; then
       have_python=yes
